--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.11.49",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "axios": "^0.27.2",
     "concurrently": "^7.3.0",
     "eslint-config-prettier": "^8.5.0",
     "http-proxy-middleware": "^2.0.6",
