--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@craco/craco": "^6.4.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,8 +11,10 @@
     "@types/node": "^16.11.49",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "antd": "^4.23.0",
     "axios": "^0.27.2",
     "concurrently": "^7.3.0",
+    "craco-antd": "^2.0.0",
     "eslint-config-prettier": "^8.5.0",
     "http-proxy-middleware": "^2.0.6",
     "jira-dev-tool": "^1.7.61",
@@ -23,9 +26,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject",
     "prepare": "husky install",
     "json-server": "json-server __Json_server_mock__/db.json --watch --port 3001 --middlewares __Json_server_mock__/middleware.js",
